project details page

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/responsive.css" />
     
-
 </head>
 
-<body class="loading">
+<body class="site-main-wrapper loading">
     <svg class="hidden">
         <symbol id="icon-menu" viewBox="0 0 119 25">
             <title>menu</title>
@@ -41,7 +40,7 @@
                 </header>
             </div>
         <div class="content">
-            <div class="carousel-wrapper home-slider">
+            <div class="menu-wrapper home-slider">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -316,12 +315,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Latest Completed Projects</h2>
-                        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
+                        <div id="completeProjectCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
                             <!-- Carousel indicators -->
                             <ol class="carousel-indicators">
-                                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                                <li data-target="#myCarousel" data-slide-to="1"></li>
-                                <li data-target="#myCarousel" data-slide-to="2"></li>
+                                <li data-target="#completeProjectCarousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#completeProjectCarousel" data-slide-to="1"></li>
+                                <li data-target="#completeProjectCarousel" data-slide-to="2"></li>
                             </ol>
                             <!-- Wrapper for carousel items -->
                             <div class="carousel-inner">
@@ -342,7 +341,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn btn--rightBorder mt-3" href="#/">Read More</a>
+                                                    <a class="btn btn--rightBorder mt-3" href="./project.html">Read More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -424,10 +423,10 @@
 
                             </div>
                             <!-- Carousel controls -->
-                            <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                            <a class="carousel-control-prev" href="#completeProjectCarousel" data-slide="prev">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                            <a class="carousel-control-next" href="#completeProjectCarousel" data-slide="next">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         </div>
@@ -498,16 +497,119 @@
                 </div>
             </div>
         </section>
-       <footer class="section--footer">
-           <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-7 mb-4 mb-lg-0">
-                        <h6 class="section-intro__subtitle">Copyright 2021 | All Rights Reserved.</h2>
+   
+    </div> 
+        <footer>
+        <div class="footer-wrap">
+            <div class="container first_class">
+                <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                        <h3>BE THE FIRST TO KNOW</h3>
+                        <p>Get all the latest information on Triedge Services, Events, Jobs
+                            and Fairs. Sign up for our newsletter today.</p>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <form class="newsletter">
+                            <input type="text" placeholder="Email Address">
+                            <button class="newsletter_submit_btn" type="submit"><i class="fa fa-paper-plane"></i></button>
+                        </form>
+
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="col-md-12">
+                            <div class="standard_social_links">
+                                <ul>
+                                    <li class="round-btn btn-facebook"><a href="#"><i class="fab fa-facebook-f"></i></a>
+
+                                    </li>
+                                    <li class="round-btn btn-linkedin"><a href="#"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
+
+                                    </li>
+                                    <li class="round-btn btn-twitter"><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+
+                                    </li>
+                                    <li class="round-btn btn-instagram"><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+
+                                    </li>
+                                    <li class="round-btn btn-whatsapp"><a href="#"><i class="fab fa-whatsapp" aria-hidden="true"></i></a>
+
+                                    </li>
+                                    <li class="round-btn btn-envelop"><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                        <div class="col-md-12">
+                            <h3 style="text-align: right;">Stay Connected</h3>
+                        </div>
                     </div>
                 </div>
             </div>
-       </footer>
-    </div>
+            <div class="second_class">
+                <div class="container second_class_bdr">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-6">
+
+                            <div class="footer-logo"><img src="http://localhost/lrn/img/footer_logo.png" alt="logo">
+                            </div>
+                            <p>Your one-stop career platform to find Jobs, Internships, Professional Trainings, Projects, and Volunteering Opportunities.</p>
+                        </div>
+                        <div class="col-md-2 col-sm-6">
+                            <h3>Quick LInks</h3>
+                            <ul class="footer-links">
+                                <li><a href="#">Home</a>
+                                </li>
+                                <li><a href="#">About us</a>
+                                </li>
+                                <li><a href="#">Triedge Partners</a>
+                                </li>
+                                <li><a href="#">Contact Us</a>
+                                </li>
+                                <li><a href="#" target="_blank">Terms &amp; Conditions</a>
+                                </li>
+                                <li><a href="#" target="_blank">Privacy Policy</a>
+                                </li>
+                                <li><a href="#">Sitemap</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <h3>OUR SERVICES</h3>
+                            <ul class="footer-category">
+                                <li><a href="#">Fresher Jobs</a>
+                                </li>
+                                <li><a href="#">InternEdge - Internships &amp; Projects </a>
+                                </li>
+                                <li><a href="#">Resume Edge - Resume Writing Services</a>
+                                </li>
+                                <li><a href="#">Readers Galleria - Curated Library</a>
+                                </li>
+                                <li><a href="#">Trideus - Campus Ambassadors</a>
+                                </li>
+                            </ul>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <h3>triedge Events</h3>
+                            <ul class="footer-links">
+                                <li><a href="#">Triedge Events</a>
+                                </li>
+
+                                <li><a href="#">Jobs &AMP; Internship Fair 2019</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+          <div class="copyright"> Copyright 2019 | All Rights Reserved by TRIEDGE Solutions Pvt. Ltd.</div>
+
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
