--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                 </div>
             </div>
         </div>
-          <div class="copyright"> Copyright 2019 | All Rights Reserved by TRIEDGE Solutions Pvt. Ltd.</div>
+          <div class="copyright"> Copyright 2019 | All Rights Reserved by antooba.com</div>
 
     </footer>
 
