--- a/project.html
+++ b/project.html
@@ -142,7 +142,7 @@
                                 </div>
                                 <div class="col-md-4 col-sm-6 col-xs-12">
                                     <div class="why-choose-banner animated bounceInLeft">
-                                        <img src="/img/block2.png" alt="">
+                                        <img src="img/block2.png" alt="">
                                         <div class="grass-shadow">
                                             <img src="img/grass.png">
                                         </div>
@@ -209,7 +209,7 @@
                                 </div>
                                 <div class="col-md-4 col-sm-6 col-xs-12">
                                     <div class="why-choose-banner animated bounceInLeft">
-                                        <img src="/img/block2.png" alt="">
+                                        <img src="img/block2.png" alt="">
                                         <div class="grass-shadow">
                                             <img src="img/grass.png">
                                         </div>
