--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
        <div class="frame">
                 <header class="header--logo">
                     <div class="logo--links">
-                        <img src="img/logo.png" />
+                        <img src="img/logo2.png" />
                     </div>
                 </header>
             </div>
@@ -51,7 +51,7 @@
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="img/1.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
-                                <h3>Owning a home is a keystone of wealth… both financial affluence and emotional security.</h3>
+                                <h3>Owning a home is a keystone of <span class="block-border">wealth…</span>  both financial affluence and emotional  <span class="block-border">security.</span> </h3>
 
                                 <div class="hero__slideContent text-center">
                                     <h1>Dream Heaven City</h1>
@@ -81,7 +81,7 @@
             <div class="menu__item menu__item--1" data-direction="bt">
                 <div class="menu__item-inner">
                     <div class="mainmenu">
-                        <a href="#" class="mainmenu__item">Home</a>
+                        <a href="index.html" class="mainmenu__item">Home</a>
                         <a href="#" class="mainmenu__item">Story</a>
                         <a href="#" class="mainmenu__item">project</a>
                         <a href="#" class="mainmenu__item">news &amp; events</a>
@@ -341,7 +341,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn btn--rightBorder mt-3" href="./project.html">Read More</a>
+                                                    <a class="btn mt-3" href="./project.html">Read More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -365,7 +365,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn btn--rightBorder mt-3" href="#/">Read More</a>
+                                                    <a class="btn mt-3" href="#/">Read More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -389,7 +389,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn btn--rightBorder mt-3" href="#/">Read More</a>
+                                                    <a class="btn mt-3" href="#/">Read More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -413,7 +413,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn btn--rightBorder mt-3" href="#/">Read More</a>
+                                                    <a class="btn mt-3" href="#/">Read More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -459,7 +459,7 @@
                                 <h6 class="font-weight-medium">100% Satisfection</h6>
                                 <p>You can relay on our amazing features list and also our customer services will.</p>
                             </div>
-                            <div class="col-lg-12 my-4">
+                            <div class="col-lg-12 my-4 d-none d-md-block d-lg-block d-xl-block">
                                 <a class="btn btn-info-gradiant btn-md border-0 text-white" href="#f12"><span>Learn More</span></a>
                             </div>
                         </div>
@@ -468,15 +468,18 @@
                         <div class="row wrap-service12">
                             <div class="col-md-6">
                                 <div class="row">
-                                    <div class="col-md-12 img-hover service-img-item--single mb-4"><img src="./img/service1.jpg" class="rounded img-shadow img-fluid" alt="wrapkit" /></div>
-                                    <div class="col-md-12 img-hover service-img-item--single mb-4"><img src="./img/service2.jpg" class="rounded img-shadow img-fluid" alt="wrapkit" /></div>
+                                    <div class="col-md-12 col-sm-6 col-xs-6 img-hover service-img-item--single mb-4"><img src="./img/service1.jpg" class="rounded img-shadow img-fluid" alt="wrapkit" /></div>
+                                    <div class="col-md-12 col-sm-6 col-xs-6 img-hover service-img-item--single mb-4"><img src="./img/service2.jpg" class="rounded img-shadow img-fluid" alt="wrapkit" /></div>
                                 </div>
                             </div>
-                            <div class="col-md-6 uneven-box">
+                            <div class="col-md-6 uneven-box d-none d-md-block d-lg-block d-xl-block">
                                 <div class="row">
-                                    <div class="col-md-12 img-hover service-img-item--single mb-4"><img src="./img/service3.jpg" class="rounded img-shadow img-fluid" alt="wrapkit" /></div>
-                                    <div class="col-md-12 img-hover service-img-item--single mb-4"><img src="./img/service4.jpg" class="rounded img-shadow img-fluid" alt="wrapkit" /></div>
+                                    <div class="col-md-12 col-sm-6 col-xs-6 img-hover service-img-item--single mb-4"><img src="./img/service3.jpg" class="rounded img-shadow img-fluid" alt="wrapkit" /></div>
+                                    <div class="col-md-12 col-sm-6 col-xs-6 img-hover service-img-item--single mb-4"><img src="./img/service4.jpg" class="rounded img-shadow img-fluid" alt="wrapkit" /></div>
                                 </div>
+                            </div>
+                            <div class="col-lg-12 my-4 d-block d-sm-none">
+                                <a class="btn btn-info-gradiant btn-md border-0 text-white" href="#f12"><span>Learn More</span></a>
                             </div>
                         </div>
                     </div>
@@ -517,42 +520,38 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="col-md-12">
-                            <div class="standard_social_links">
+                            <div class="social_links mt-3">
                                 <ul>
-                                    <li class="round-btn btn-facebook"><a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <li class=""><a href="#"><i class="fab fa-facebook-f"></i></a>
 
                                     </li>
-                                    <li class="round-btn btn-linkedin"><a href="#"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
+                                    <li class=""><a href="#"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
 
                                     </li>
-                                    <li class="round-btn btn-twitter"><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                                    <li class=""><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
 
                                     </li>
-                                    <li class="round-btn btn-instagram"><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                                    <li class=""><a href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 
                                     </li>
-                                    <li class="round-btn btn-whatsapp"><a href="#"><i class="fab fa-whatsapp" aria-hidden="true"></i></a>
+                                    <li class=""><a href="#"><i class="fab fa-whatsapp" aria-hidden="true"></i></a>
 
                                     </li>
-                                    <li class="round-btn btn-envelop"><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                                    <li class=""><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 
                                     </li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-12">
-                            <h3 style="text-align: right;">Stay Connected</h3>
-                        </div>
                     </div>
                 </div>
             </div>
-            <div class="second_class">
-                <div class="container second_class_bdr">
+            <div class="company-info">
+                <div class="container company-info_bdr">
                     <div class="row">
                         <div class="col-md-4 col-sm-6">
 
-                            <div class="footer-logo"><img src="http://localhost/lrn/img/footer_logo.png" alt="logo">
+                            <div class="footer-logo"><img src="img/logo2.png" alt="logo">
                             </div>
                             <p>Your one-stop career platform to find Jobs, Internships, Professional Trainings, Projects, and Volunteering Opportunities.</p>
                         </div>
@@ -563,7 +562,7 @@
                                 </li>
                                 <li><a href="#">About us</a>
                                 </li>
-                                <li><a href="#">Triedge Partners</a>
+                                <li><a href="#">Project</a>
                                 </li>
                                 <li><a href="#">Contact Us</a>
                                 </li>
@@ -578,26 +577,26 @@
                         <div class="col-md-3 col-sm-6">
                             <h3>OUR SERVICES</h3>
                             <ul class="footer-category">
-                                <li><a href="#">Fresher Jobs</a>
+                                <li><a href="#">Companies</a>
                                 </li>
-                                <li><a href="#">InternEdge - Internships &amp; Projects </a>
+                                <li><a href="#">Our Client </a>
                                 </li>
-                                <li><a href="#">Resume Edge - Resume Writing Services</a>
+                                <li><a href="#">Mission and Vision</a>
                                 </li>
-                                <li><a href="#">Readers Galleria - Curated Library</a>
+                                <li><a href="#">Board of Director</a>
                                 </li>
-                                <li><a href="#">Trideus - Campus Ambassadors</a>
+                                <li><a href="#">Management Team</a>
                                 </li>
                             </ul>
                             <div class="clearfix"></div>
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <h3>triedge Events</h3>
+                            <h3>Fanam Events</h3>
                             <ul class="footer-links">
-                                <li><a href="#">Triedge Events</a>
+                                <li><a href="#">News &amp; Events</a>
                                 </li>
 
-                                <li><a href="#">Jobs &AMP; Internship Fair 2019</a>
+                                <li><a href="#">Career</a>
                                 </li>
                             </ul>
                         </div>
