--- a/project.html
+++ b/project.html
@@ -126,7 +126,10 @@
                                                                 <h5>SOLID PVC CLADDING</h5>
                                                                 <p>With proprietary aluminum frames and stainless steel fasteners</p>
                                                             </li>
-
+                                                            <li>
+                                                                <h5>SOLID PVC CLADDING</h5>
+                                                                <p>With proprietary aluminum frames and stainless steel fasteners</p>
+                                                            </li>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -149,6 +152,10 @@
                                                     <div class="project-details-content-item-box--summary feature-animation">
                                                         <h2 class="list-header">FEATURES </h2>
                                                         <ul>
+                                                           <li>
+                                                                <h5>ARCHITECTURAL PROJECTIONS</h5>
+                                                                <p>Welded aluminum space frame, with PVC and cementitious envelope</p>
+                                                            </li>
                                                             <li>
                                                                 <h5>ARCHITECTURAL PROJECTIONS</h5>
                                                                 <p>Welded aluminum space frame, with PVC and cementitious envelope</p>
@@ -294,7 +301,7 @@
 
                             <a class="nav-link mb-3 p-3 shadow" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">
                                 <i class="fa fa-star mr-2"></i>
-                                <span class="font-weight-bold small text-uppercase">Reviews</span></a>
+                                <span class="font-weight-bold small text-uppercase">Location</span></a>
 
                             <a class="nav-link mb-3 p-3 shadow" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">
                                 <i class="fa fa-check mr-2"></i>
@@ -377,8 +384,8 @@
                             </div>
 
                             <div class="tab-pane fade shadow rounded bg-white p-5" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-                                <h4 class="font-italic mb-4">Reviews</h4>
-                                <p class="font-italic text-muted mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <h4 class="mb-4">Location</h4>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14610.267990200467!2d90.35666676977539!3d23.727152099999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1617090760642!5m2!1sen!2sbd" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                             </div>
 
                             <div class="tab-pane fade shadow rounded bg-white" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
@@ -541,8 +548,7 @@
 
 
 
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
     <script src="assets/font-awesome/fontawesome.min.js"></script>
@@ -553,6 +559,7 @@
     <script src="js/full-screen-nav.js"></script>
     <script src="js/project-block-slider.js"></script>
     <script src="js/jquery.nice-select.min.js"></script>
+    <script src="js/instagramlite.js"></script>
     <script src="js/plugin.js"></script>
 </body>
 
