footer and slider update

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="content">
             <div class="menu-wrapper home-slider">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="0">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -64,12 +64,30 @@
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/1.jpg" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>Owning a home is a keystone of <span class="block-border">wealth…</span> both financial affluence and emotional <span class="block-border">security.</span> </h3>
+
+                                <div class="hero__slideContent text-center">
+                                    <h1>Mega Heaven City</h1>
+                                    <p>If you are looking at blank cassettes on the web Lorem ipsum dolor sit amet, consectetur adipisicing eiusmod tempor incididunt.</p>
+                                    <a class="btn btn--leftBorder btn--rightBorder" href="#/">Details</a>
+                                    <span class="hero__slideContent--right"></span>
+                                </div>
+
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/1.jpg" alt="Third slide">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>djkhdsfhsdhfhsdhfkhkj</h5>
-                                <p>dsfsdfdsf</p>
+                                <h3>Owning a home is a keystone of <span class="block-border">wealth…</span> both financial affluence and emotional <span class="block-border">security.</span> </h3>
+
+                                <div class="hero__slideContent text-center">
+                                    <h1>World Class City</h1>
+                                    <p>If you are looking at blank cassettes on the web Lorem ipsum dolor sit amet, consectetur adipisicing eiusmod tempor incididunt.</p>
+                                    <a class="btn btn--leftBorder btn--rightBorder" href="#/">Details</a>
+                                    <span class="hero__slideContent--right"></span>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -773,7 +791,7 @@
                 </div>
             </div>
         </div>
-        <div class="copyright"> Copyright 2019 | All Rights Reserved by antooba.com</div>
+        <div class="copyright"> Copyright 2019 | All Rights Reserved by Practice</div>
 
     </footer>
 
