--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="img/1.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
-                                <h3>Owning a home is a keystone of <span class="block-border">wealth…</span> both financial affluence and emotional <span class="block-border">security.</span> </h3>
+                                <h3>Owning a home is a keystone of <span class="block-border">wealth.</span> both financial affluence and emotional <span class="block-border">security.</span> </h3>
 
                                 <div class="hero__slideContent text-center">
                                     <h1>Dream Heaven City</h1>
@@ -288,7 +288,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn mt-3" href="./project.html">Read More</a>
+                                                    <a class="btn mt-3" href="./project-details.html">Read More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -336,7 +336,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn mt-3" href="#/">Read More</a>
+                                                    <a class="btn mt-3" href="./project-details.html">Read More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -360,7 +360,7 @@
                                                     <h4 class="section-intro__title left-border">December, 2018</h4>
                                                     <h2 class="section-intro__subtitle small">Pure Bedroom Architecture</h2>
                                                     <p>If you are looking at blank cassettes on the web lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                                                    <a class="btn mt-3" href="#/">Read More</a>
+                                                    <a class="btn mt-3" href="./project-details.html">Read More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -452,7 +452,7 @@
 
                         <figure class="figure">
                             <img src="img/places1.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                            <figcaption class="figure-caption">
+                            <figcaption class="figure-caption mt-3">
                                 <h4>Richmond-Adelaide Centre</h4>
                                 <p>Toronto, Canada</p>
                             </figcaption>
@@ -463,7 +463,7 @@
                     <div class="col-md-7">
                         <figure class="figure">
                             <img src="img/places2.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-                            <figcaption class="figure-caption">
+                            <figcaption class="figure-caption mt-3">
                                 <h4>Australian Office Portfolio Take-Private</h4>
                                 <p>Sydney and Melbourne, Australia</p>
                             </figcaption>
